github actions cicd setup, added railway deployment

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,16 +1,38 @@
-# Server
+# ============================================
+# ThingBase API - Environment Configuration
+# ============================================
+# Copy this file to .env and update values
+
+# Application
 NODE_ENV=development
 PORT=3001
 
-# Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/iot?schema=public"
+# Database (PostgreSQL)
+# Local: postgresql://postgres:postgres@localhost:5433/iot
+# Railway internal: postgresql://${{Postgres.PGUSER}}:${{Postgres.PGPASSWORD}}@${{Postgres.PGHOST}}:${{Postgres.PGPORT}}/${{Postgres.PGDATABASE}}
+# External (Neon/Supabase): Use their connection string
+DATABASE_URL="postgresql://postgres:postgres@localhost:5433/iot?schema=public"
 
 # Redis
+# Local: redis://localhost:6379
+# Railway internal: redis://${{Redis.REDIS_URL}}
 REDIS_URL="redis://localhost:6379"
 
-# JWT
+# MQTT Broker (Mosquitto)
+# Local: mqtt://localhost:1883
+# Railway internal: mqtt://${{Mosquitto.RAILWAY_PRIVATE_DOMAIN}}:1883
+MQTT_URL="mqtt://localhost:1883"
+
+# JWT Authentication
 JWT_SECRET="your-super-secret-jwt-key-change-in-production-min-32-chars"
 JWT_ACCESS_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
 
-RESEND_APY_KEY=xxxxxxxxx
+# CORS (comma-separated origins for production)
+# Example: https://your-web-app.railway.app,http://localhost:3000
+CORS_ORIGIN="http://localhost:3000"
+
+# Email (Resend - https://resend.com)
+RESEND_API_KEY="re_xxxxxxxxxxxxx"
+EMAIL_FROM="ThingBase <noreply@yourdomain.com>"
+FRONTEND_URL="http://localhost:3000"
