feat: Streamline database migrations by adding a Docker entrypoint script for conditional execution and reordering CI/CD to run migrations prior to deployment.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,6 +7,9 @@
 NODE_ENV=development
 PORT=3001
 
+# Database Migrations (set to 'true' to run migrations on container start)
+RUN_MIGRATIONS=false
+
 # Database (PostgreSQL)
 # Local: postgresql://postgres:postgres@localhost:5433/iot
 # Railway internal: postgresql://${{Postgres.PGUSER}}:${{Postgres.PGPASSWORD}}@${{Postgres.PGHOST}}:${{Postgres.PGPORT}}/${{Postgres.PGDATABASE}}
