--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,38 +54,12 @@ jobs:
         continue-on-error: true
 
   # ============================================
-  # Deploy to Railway (main branch only)
-  # ============================================
-  deploy:
-    name: Deploy to Railway
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy API to Railway
-        run: railway up --service api
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-      - name: Deploy Web to Railway
-        run: railway up --service web
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-  # ============================================
-  # Database Migrations (main branch only)
+  # Database Migrations (runs BEFORE deploy)
   # ============================================
   migrate:
     name: Run Database Migrations
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: build
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
@@ -113,3 +87,35 @@ jobs:
         run: pnpm --filter=@thingbase/api db:push
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+  # ============================================
+  # Deploy to Railway (after migrations)
+  # ============================================
+  deploy:
+    name: Deploy to Railway
+    runs-on: ubuntu-latest
+    needs: migrate
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Railway CLI
+        run: npm install -g @railway/cli
+
+      - name: Deploy API to Railway
+        run: railway up --service api --detach
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Deploy Web to Railway
+        run: railway up --service web --detach
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Deployment Summary
+        run: |
+          echo "🚀 Deployment triggered successfully!"
+          echo "📦 API and Web services are being deployed on Railway"
+          echo "⏱️ Check Railway dashboard for deployment status"
