feat: Implement MQTT authentication and authorization for the broker and clients, and add automatic JWT token refreshing to the web client.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -25,8 +25,12 @@ REDIS_URL="redis://localhost:6379"
 # Local: mqtt://localhost:1883
 # Railway internal: mqtt://${{Mosquitto.RAILWAY_PRIVATE_DOMAIN}}:1883
 MQTT_URL="mqtt://localhost:1883"
+MQTT_USERNAME="iot-api"
+MQTT_PASSWORD="dev-mqtt-password"
 
 # JWT Authentication
+# IMPORTANT: This secret is REQUIRED - the API will not start without it
+# Generate a secure secret: openssl rand -base64 64
 JWT_SECRET="your-super-secret-jwt-key-change-in-production-min-32-chars"
 JWT_ACCESS_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
