--- a/infra/mosquitto/mosquitto.conf
+++ b/infra/mosquitto/mosquitto.conf
@@ -1,22 +1,42 @@
 # Mosquitto MQTT Broker Configuration
+# Security-hardened configuration for IoT SaaS Platform
 
-# Listener for MQTT connections
+# ============================================
+# LISTENERS
+# ============================================
+
+# Standard MQTT listener
 listener 1883
 protocol mqtt
 
-# Listener for WebSocket connections
+# WebSocket listener (for browser-based clients if needed)
 listener 9001
 protocol websockets
 
-# Allow anonymous connections for development
-# In production, set this to false and configure authentication
-allow_anonymous true
+# ============================================
+# AUTHENTICATION
+# ============================================
 
-# Persistence
+# Disable anonymous connections (CRITICAL for security)
+allow_anonymous false
+
+# Password-based authentication
+password_file /mosquitto/config/passwd
+
+# Access Control List for topic-level permissions
+acl_file /mosquitto/config/acl.conf
+
+# ============================================
+# PERSISTENCE
+# ============================================
+
 persistence true
 persistence_location /mosquitto/data/
 
-# Logging
+# ============================================
+# LOGGING
+# ============================================
+
 log_dest file /mosquitto/log/mosquitto.log
 log_dest stdout
 log_type error
@@ -24,7 +44,13 @@ log_type warning
 log_type notice
 log_type information
 
-# Connection settings
+# ============================================
+# CONNECTION SETTINGS
+# ============================================
+
+# Unlimited connections (-1 = no limit)
 max_connections -1
 
+# Keep-alive settings
+max_keepalive 300
 
