--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,7 +54,7 @@ jobs:
         continue-on-error: true
 
   # ============================================
-  # Database Migrations (runs BEFORE deploy)
+  # Database Migrations (runs BEFORE Railway deploys)
   # ============================================
   migrate:
     name: Run Database Migrations
@@ -89,33 +89,12 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   # ============================================
-  # Deploy to Railway (after migrations)
+  # Deployment handled by Railway GitHub Integration
   # ============================================
-  deploy:
-    name: Deploy to Railway
-    runs-on: ubuntu-latest
-    needs: migrate
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy API to Railway
-        run: railway up --service api --detach
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-      - name: Deploy Web to Railway
-        run: railway up --service web --detach
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-      - name: Deployment Summary
-        run: |
-          echo "🚀 Deployment triggered successfully!"
-          echo "📦 API and Web services are being deployed on Railway"
-          echo "⏱️ Check Railway dashboard for deployment status"
+  # Railway automatically deploys when changes are pushed to main.
+  # No GitHub Actions deployment job is needed.
+  # 
+  # Required setup:
+  # 1. Connect your GitHub repo to Railway
+  # 2. Add DATABASE_URL to GitHub repository secrets
+  #    (Settings → Secrets → Actions → New repository secret)
