--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Build shared package
         run: pnpm build --filter=@thingbase/shared
 
+      - name: Generate Prisma client
+        run: pnpm --filter=@thingbase/api db:generate
+
       - name: Build API
         run: pnpm build --filter=@thingbase/api
 
