feat: Add new web UI components and images, update web app layout, modify README and gitignore, and refresh firmware dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,14 @@ Thumbs.db
 .cache/
 tmp/
 temp/
+
+# ═══════════════════════════════════════════════════════════════════════════════
+# FIRMWARE / PLATFORMIO
+# ═══════════════════════════════════════════════════════════════════════════════
+firmware/esp32/.pio/
+firmware/esp32/.pioenvs/
+firmware/esp32/.piolibdeps/
+firmware/esp32/libdeps/
+*.bin
+*.elf
+*.hex
