feat: Replace Mosquitto MQTT broker with EMQX, including HTTP authentication and updated deployment configurations.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -21,12 +21,18 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5433/iot?schema=public"
 # Railway internal: redis://${{Redis.REDIS_URL}}
 REDIS_URL="redis://localhost:6379"
 
-# MQTT Broker (Mosquitto)
+# MQTT Broker (EMQX)
 # Local: mqtt://localhost:1883
-# Railway internal: mqtt://${{Mosquitto.RAILWAY_PRIVATE_DOMAIN}}:1883
+# Railway: mqtt://${{EMQX.RAILWAY_PRIVATE_DOMAIN}}:1883
 MQTT_URL="mqtt://localhost:1883"
 MQTT_USERNAME="iot-api"
 MQTT_PASSWORD="dev-mqtt-password"
+
+# System MQTT credentials (for API and simulator authentication)
+MQTT_API_USERNAME="iot-api"
+MQTT_API_PASSWORD="dev-mqtt-password"
+MQTT_SIMULATOR_USERNAME="iot-simulator"
+MQTT_SIMULATOR_PASSWORD="dev-mqtt-password"
 
 # JWT Authentication
 # IMPORTANT: This secret is REQUIRED - the API will not start without it
