--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,28 +29,34 @@ services:
       timeout: 5s
       retries: 5
 
-  mosquitto:
-    image: eclipse-mosquitto:2
-    container_name: iot-mosquitto
+  # EMQX MQTT Broker with HTTP Authentication
+  # For local dev, uses built-in auth. For production, uses HTTP auth to API.
+  emqx:
+    image: emqx/emqx:5.8
+    container_name: iot-emqx
     ports:
-      - "1883:1883"
-      - "9001:9001"
+      - "1883:1883" # MQTT TCP
+      - "8083:8083" # MQTT WebSocket
+      - "18083:18083" # Dashboard
+    environment:
+      EMQX_NODE__NAME: "emqx@127.0.0.1"
+      EMQX_CLUSTER__DISCOVERY_STRATEGY: "static"
+      EMQX_LOG__CONSOLE__LEVEL: "info"
+      EMQX_DASHBOARD__DEFAULT_USERNAME: "admin"
+      EMQX_DASHBOARD__DEFAULT_PASSWORD: "public"
+      # Allow anonymous for local development (disable in production!)
+      EMQX_ALLOW_ANONYMOUS: "true"
     volumes:
-      - ./infra/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
-      - ./infra/mosquitto/passwd:/mosquitto/config/passwd
-      - ./infra/mosquitto/acl.conf:/mosquitto/config/acl.conf
-      - mosquitto_data:/mosquitto/data
-      - mosquitto_log:/mosquitto/log
+      - emqx_data:/opt/emqx/data
     healthcheck:
-      test: [ "CMD", "mosquitto_sub", "-t", "$$SYS/#", "-C", "1", "-i", "healthcheck", "-W", "3", "-u", "iot-api", "-P", "dev-mqtt-password" ]
+      test: [ "CMD", "emqx", "ping" ]
       interval: 10s
       timeout: 5s
-      retries: 3
+      retries: 5
 
 volumes:
   postgres_data:
   redis_data:
-  mosquitto_data:
-  mosquitto_log:
+  emqx_data:
 
 
