Simplify EMQX config - configure HTTP auth via Dashboard

--- a/infra/emqx/emqx.conf
+++ b/infra/emqx/emqx.conf
@@ -1,15 +1,14 @@
 ## ============================================
 ## ThingBase EMQX Configuration
 ## ============================================
-## This configuration enables HTTP authentication
-## for dynamic device credential validation.
+## Basic configuration. HTTP authentication is
+## configured via environment variables at runtime.
 
 ## --------------------------------------------
 ## Node Settings
 ## --------------------------------------------
 node {
   name = "emqx@127.0.0.1"
-  cookie = "${EMQX_NODE_COOKIE}"
   data_dir = "/opt/emqx/data"
 }
 
@@ -30,14 +29,13 @@ dashboard {
     }
   }
   default_username = "admin"
-  default_password = "${EMQX_DASHBOARD_PASSWORD}"
+  default_password = "public"
 }
 
 ## --------------------------------------------
 ## Listeners
 ## --------------------------------------------
 listeners {
-  ## Standard MQTT (TCP)
   tcp {
     default {
       bind = "0.0.0.0:1883"
@@ -45,7 +43,6 @@ listeners {
     }
   }
   
-  ## MQTT over WebSocket
   ws {
     default {
       bind = "0.0.0.0:8083"
@@ -65,92 +62,6 @@ log {
 }
 
 ## --------------------------------------------
-## Authentication - HTTP Backend
-## --------------------------------------------
-## This calls your API to validate credentials
-## when devices connect with dynamic tokens.
-
-authentication = [
-  {
-    mechanism = password_based
-    backend = http
-    enable = true
-    
-    method = post
-    url = "${THINGBASE_API_URL}/api/v1/mqtt/auth"
-    
-    body {
-      username = "${username}"
-      password = "${password}"
-      clientid = "${clientid}"
-    }
-    
-    headers {
-      "Content-Type" = "application/json"
-    }
-    
-    ## Connection settings
-    connect_timeout = "5s"
-    request_timeout = "5s"
-    
-    ## Pool settings
-    pool_size = 8
-    
-    ## SSL settings (for HTTPS API)
-    ssl {
-      enable = true
-      verify = verify_none
-    }
-  }
-]
-
-## --------------------------------------------
-## Authorization - HTTP Backend
-## --------------------------------------------
-## This calls your API to check topic permissions
-## (ACL) for each publish/subscribe operation.
-
-authorization {
-  no_match = deny
-  deny_action = disconnect
-  cache {
-    enable = true
-    max_size = 1024
-    ttl = "5m"
-  }
-  
-  sources = [
-    {
-      type = http
-      enable = true
-      
-      method = post
-      url = "${THINGBASE_API_URL}/api/v1/mqtt/acl"
-      
-      body {
-        username = "${username}"
-        topic = "${topic}"
-        acc = "${action}"
-        clientid = "${clientid}"
-      }
-      
-      headers {
-        "Content-Type" = "application/json"
-      }
-      
-      connect_timeout = "5s"
-      request_timeout = "5s"
-      pool_size = 8
-      
-      ssl {
-        enable = true
-        verify = verify_none
-      }
-    }
-  ]
-}
-
-## --------------------------------------------
 ## MQTT Settings
 ## --------------------------------------------
 mqtt {
@@ -158,12 +69,8 @@ mqtt {
   max_clientid_len = 256
   max_topic_levels = 128
   max_qos_allowed = 2
-  
-  ## Session settings
   max_mqueue_len = 1000
   mqueue_default_priority = lowest
-  
-  ## Keep-alive
   keepalive_multiplier = 1.5
 }
 
