Add required node.cookie to EMQX config

--- a/infra/emqx/emqx.conf
+++ b/infra/emqx/emqx.conf
@@ -9,6 +9,7 @@
 ## --------------------------------------------
 node {
   name = "emqx@127.0.0.1"
+  cookie = "emqxsecretcookie"
   data_dir = "/opt/emqx/data"
 }
 
