--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,7 +23,7 @@ REDIS_URL="redis://localhost:6379"
 
 # MQTT Broker (EMQX)
 # Local: mqtt://localhost:1883
-# Railway: mqtt://${{EMQX.RAILWAY_PRIVATE_DOMAIN}}:1883
+# EMQX Cloud: mqtts://xxx.emqxsl.com:8883
 MQTT_URL="mqtt://localhost:1883"
 MQTT_USERNAME="iot-api"
 MQTT_PASSWORD="dev-mqtt-password"
@@ -33,6 +33,11 @@ MQTT_API_USERNAME="iot-api"
 MQTT_API_PASSWORD="dev-mqtt-password"
 MQTT_SIMULATOR_USERNAME="iot-simulator"
 MQTT_SIMULATOR_PASSWORD="dev-mqtt-password"
+
+# Shared device credentials (for EMQX Cloud Serverless / HiveMQ Cloud)
+# When set, these are sent to devices during provisioning instead of dynamic creds
+MQTT_DEVICE_USERNAME="device"
+MQTT_DEVICE_PASSWORD="dev-device-password"
 
 # JWT Authentication
 # IMPORTANT: This secret is REQUIRED - the API will not start without it
