--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -62,5 +62,5 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:3001/api/health || exit 1
 
-# Start the API directly with node - this is the Docker CMD
-CMD ["node", "dist/main.js"]
+# Start the API - regenerate Prisma client at runtime to pick up DATABASE_URL env var
+CMD ["sh", "-c", "npx prisma generate && node dist/main.js"]
