--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -10,6 +10,8 @@ lib_deps =
     bblanchon/ArduinoJson @ ^7.0.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/me-no-dev/AsyncTCP.git
+    adafruit/DHT sensor library@^1.4.4
+    adafruit/Adafruit Unified Sensor@^1.1.9
 
 ; Upload settings
 upload_port = /dev/cu.usbserial-210
